--- a/project/MoneyGrower/.settings/org.eclipse.core.resources.prefs
+++ b/project/MoneyGrower/.settings/org.eclipse.core.resources.prefs
@@ -2,7 +2,9 @@ eclipse.preferences.version=1
 encoding//src/application/Main.java=UTF-8
 encoding//src/controller/DangKiController.java=UTF-8
 encoding//src/controller/DangNhapController.java=UTF-8
+encoding//src/controller/GiaoDichController.java=UTF-8
 encoding//src/controller/MainController.java=UTF-8
 encoding//src/controller/NguoiDungController.java=UTF-8
+encoding//src/custom/PaymentBoard.java=UTF-8
 encoding//src/helper/ConfirmDialogHelper.java=UTF-8
 encoding//src/helper/PopupHelper.java=UTF-8
