--- a/project/MoneyGrower/.settings/org.eclipse.core.resources.prefs
+++ b/project/MoneyGrower/.settings/org.eclipse.core.resources.prefs
@@ -4,7 +4,9 @@ encoding//src/controller/DangKiController.java=UTF-8
 encoding//src/controller/DangNhapController.java=UTF-8
 encoding//src/controller/GiaoDichController.java=UTF-8
 encoding//src/controller/MainController.java=UTF-8
+encoding//src/controller/NganSachController.java=UTF-8
 encoding//src/controller/NguoiDungController.java=UTF-8
+encoding//src/custom/BudgetBox.java=UTF-8
 encoding//src/custom/PaymentBoard.java=UTF-8
 encoding//src/helper/ConfirmDialogHelper.java=UTF-8
 encoding//src/helper/PopupHelper.java=UTF-8
