--- a/project/MoneyGrower/.classpath
+++ b/project/MoneyGrower/.classpath
@@ -12,11 +12,18 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.48-bin.jar"/>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.48-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/fontbox-2.0.18.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jempbox-1.8.16.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pdfbox-2.0.18.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pdfbox-tools-2.0.18.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/preflight-2.0.18.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xmpbox-2.0.18.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
